syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.sky.centaur.mail.client.api.grpc";
option java_outer_classname = "TemplateMailServiceProto";

service TemplateMailService {
  rpc sendMail (TemplateMailSendGrpcCmd) returns (google.protobuf.Empty);
}

message TemplateMailSendGrpcCmd {
  TemplateMailSendGrpcCo templateMailSendGrpcCo = 1;
}

message TemplateMailSendGrpcCo {
  google.protobuf.StringValue address = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue from = 3;
  google.protobuf.StringValue to = 4;
  google.protobuf.StringValue subject = 5;
  google.protobuf.StringValue data = 6;
}
